Define region during DB creation

--- a/grasslib/test_config.conf
+++ b/grasslib/test_config.conf
@@ -3,6 +3,13 @@ grassdata = /tmp/GRASSDATA
 location = FOREST
 epsg = 32653
 
+# Working region BBOX
+north = 5289281
+south = 4986934
+east = 590061
+west = 436720
+resolution = 30
+
 [GRASS]
 grass_lib = /usr/lib/grass70
 grass_exec = /usr/bin/grass
