Упрощение модели: удалена значительная часть коэффициентов

--- a/config_examples/logg_ranging.conf
+++ b/config_examples/logg_ranging.conf
@@ -1,15 +1,16 @@
 [DATABASE]
-grassdata = /home/klsvd/GRASSDATA
-location = PRIOR_TEST
+grassdata = /home/klsvd/GRASSDATA 
+location = PRIOR
 epsg = 32653
 
 # Working region BBOX
-north = 5375000
-south = 4400000
-east = 850000
-west = 120000
-resolution = 90
+resolution = 250
+north = 5555000.0
+south = 4676000.0
+west = 123000.0
+east = 853000.0
 
 [GRASS]
-grass_lib = /usr/lib/grass70
+grass_lib = /usr/lib/grass72
 grass_exec = /usr/bin/grass
+    
